src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ConsiderationPassword__c</fullName>
        <inlineHelpText>Customer Password to Identify for Consideration Scenarios.</inlineHelpText>
        <label>Consideration Password</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <description>Household Record Type:
- Domestic Owner
- Domestic Tenant
Other Record Type:
- Other 
Copy over to Account &quot;Type&quot; field when creating a household Account by trigger</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredContactMethod__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShowOnBill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SocialRate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New to be reviewed by Echo. Please confirm if the Front Office Agent will be able to edit or that’s read only</description>
        <label>Social Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_Recursion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created to control recursion of process builder to update HH contact from account.</description>
        <label>Stop Recursion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>HouseholdContact</fullName>
        <active>true</active>
        <label>Household Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>OtherContact</fullName>
        <active>true</active>
        <label>Other Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MandatoryFirstName</fullName>
        <active>true</active>
        <description>Validation rule for First Name</description>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Enter the First Name</errorMessage>
    </validationRules>
</CustomObject>